# xtra

./: .gitignore  CMakeLists.txt  Cargo.toml  build.sh  run.sh
src/kernel/: kernel.cpp  linker.ld  start.s
src/loader/: boot.cpp  linker.ld  start.s
xtra-bootloader/: Cargo.toml  build.rs  link.ld
xtra-bootloader/src/: block_device.rs  device_tree.rs  elf.rs  fat32.rs  main.rs  mount_table.rs  partition_table.rs  power.rs  uart.rs  virtio.rs
xtra-kernel/: Cargo.toml  banner.txt  build.rs  link copy.ld  link.ld  panic.txt  shared_locations.ld
xtra-kernel-shared/: Cargo.toml
xtra-kernel-shared/src/: device_tree.rs  lib.rs  mount_table.rs
xtra-kernel/src/: device_tree.rs  interrupts.rs  main.rs  printing.rs  uart.rs
xtra-kernel/src/arch/: mod.rs
xtra-kernel/src/arch/riscv_64/: csr.rs  mmu.rs  mod.rs
xtra-kernel/src/arch/riscv_64/mmu/: mod.rs
xtra-kernel/src/arch/riscv_64/mmu/sv39/: page_table.rs  page_table_entry.rs  virtual_address.rs
xtra-kernel/src/devices/: block_devices.rs  bus_devices.rs  clint.rs  console.rs  cpu_devices.rs  graphics_devices.rs  hid_devices.rs  interrupt_controllers.rs  mmio_devices.rs  mod.rs  network_devices.rs  plic_devices.rs  power_devices.rs  serial_devices.rs  test_devices.rs  timer_devices.rs  virtio_devices.rs
xtra-kernel/src/devices/bus_devices/: mod.rs
xtra-kernel/src/devices/hid_devices/: mod.rs
xtra-kernel/src/filesystems/: mod.rs
xtra-kernel/src/locking/: mod.rs  spin_lock.rs
xtra-kernel/src/memory/: free_page_list.rs  heap.rs  kernel.rs  memory_device.rs  mod.rs
xtra-kernel/src/memory/mmu/: address_space.rs  free_page_list.rs  mod.rs  page_box.rs  permissions.rs  virtual_page_address.rs  virtual_page_ptr.rs
xtra-kernel/src/riscv/: csr.rs  mod.rs
xtra-kernel/src/scheduler/: mod.rs
xtra-shared/: Cargo.toml
xtra-shared/src/: lib.rs  mount_table.rs
